[gd_scene load_steps=2 format=3 uid="uid://c8vhkswnpc1tg"]

[ext_resource type="Script" path="res://scripts/ui/ProgressScreen.gd" id="1_0xr2g"]

[node name="ProgressScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_0xr2g")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.9)

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = 50.0
offset_right = -50.0
offset_bottom = -50.0

[node name="Header" type="VBoxContainer" parent="VBox"]
layout_mode = 2

[node name="Title" type="Label" parent="VBox/Header"]
layout_mode = 2
text = "CHARACTER PROGRESSION"
horizontal_alignment = 1
add_theme_font_size_override("font_size", 24)

[node name="LevelLabel" type="Label" parent="VBox/Header"]
layout_mode = 2
text = "Level 1"
horizontal_alignment = 1
add_theme_color_override("font_color", Color(1, 1, 0, 1))
add_theme_font_size_override("font_size", 20)

[node name="ExpContainer" type="VBoxContainer" parent="VBox/Header"]
layout_mode = 2

[node name="ExpLabel" type="Label" parent="VBox/Header/ExpContainer"]
layout_mode = 2
text = "0 / 100 XP"
horizontal_alignment = 1

[node name="ExpBar" type="ProgressBar" parent="VBox/Header/ExpContainer"]
layout_mode = 2
max_value = 100.0

[node name="HSeparator" type="HSeparator" parent="VBox"]
layout_mode = 2

[node name="Content" type="HBoxContainer" parent="VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="StatsPanel" type="VBoxContainer" parent="VBox/Content"]
layout_mode = 2
size_flags_horizontal = 3

[node name="StatsTitle" type="Label" parent="VBox/Content/StatsPanel"]
layout_mode = 2
text = "STATS"
horizontal_alignment = 1
add_theme_color_override("font_color", Color(0, 1, 1, 1))

[node name="StatsVBox" type="VBoxContainer" parent="VBox/Content/StatsPanel"]
layout_mode = 2

[node name="VSeparator" type="VSeparator" parent="VBox/Content"]
layout_mode = 2

[node name="SpellsPanel" type="VBoxContainer" parent="VBox/Content"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SpellsTitle" type="Label" parent="VBox/Content/SpellsPanel"]
layout_mode = 2
text = "SPELLS"
horizontal_alignment = 1
add_theme_color_override("font_color", Color(1, 0, 1, 1))

[node name="SpellsGrid" type="GridContainer" parent="VBox/Content/SpellsPanel"]
layout_mode = 2
columns = 3

[node name="VSeparator2" type="VSeparator" parent="VBox/Content"]
layout_mode = 2

[node name="AchievementsPanel" type="VBoxContainer" parent="VBox/Content"]
layout_mode = 2
size_flags_horizontal = 3

[node name="AchievementsTitle" type="Label" parent="VBox/Content/AchievementsPanel"]
layout_mode = 2
text = "ACHIEVEMENTS"
horizontal_alignment = 1
add_theme_color_override("font_color", Color(1, 1, 0, 1))

[node name="AchievementsVBox" type="VBoxContainer" parent="VBox/Content/AchievementsPanel"]
layout_mode = 2

[node name="HSeparator2" type="HSeparator" parent="VBox"]
layout_mode = 2

[node name="CloseButton" type="Button" parent="VBox"]
layout_mode = 2
text = "Close"